# aes67-norns

./: .gitignore  CLAUDE.md  CMakeLists.txt  IMPLEMENTATION_PLAN.md  README.md  norns_aes67_bridge.sh  norns_aes67_duplex.sh
src/: AES67Bridge.cpp  AES67Bridge.h  AudioConverter.cpp  AudioConverter.h  JackClient.h  NetworkManager.cpp  NetworkManager.h  PTPSync.cpp  PTPSync.h  RTPHandler.cpp  RTPHandler.h  main.cpp
